<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="dataGrab" Id="{c4f9d33c-8c0c-018b-158e-5709296def3f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	axis1:typeDataAxis;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>